--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // https://mvnrepository.com/artifact/org.testng/testng
+    implementation 'org.testng:testng:7.10.2'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
+    testImplementation 'org.slf4j:slf4j-nop:1.7.36'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
 
 tasks.withType(JavaCompile).configureEach {
