--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.23.0'
+
+    // https://mvnrepository.com/artifact/io.qameta.allure/allure-bom
+    testImplementation platform('io.qameta.allure:allure-bom:2.29.0')
+    // https://mvnrepository.com/artifact/io.qameta.allure/allure-junit5
+    testImplementation 'io.qameta.allure:allure-junit5:2.29.0'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
+    testImplementation 'org.slf4j:slf4j-nop:2.0.16'
 }
 
 test {
